maintainIT2/src/objects/Make__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synced_Error_Message__c</fullName>
        <label>Synced Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synced_Platform__c</fullName>
        <label>Synced Platform</label>
        <picklist>
            <picklistValues>
                <fullName>CalAmp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroku</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Synced_Status__c</fullName>
        <formula>IF(ISPICKVAL(Synced_Platform__c, &quot;Heroku&quot;),IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Record Synced With Heroku&quot;),IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;Record not Synced&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Synced Status</label>
        <type>Text</type>
    </fields>
    <label>Make</label>
    <listViews>
        <fullName>All</fullName>
        <columns>External_Id__c</columns>
        <columns>NAME</columns>
        <columns>Synced_Error_Message__c</columns>
        <columns>Synced_Platform__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Make Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Makes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>